Admin panel redesign + automatic holidays + email/credentials update
- Změna notifikačního emailu na roman.velicka1@gmail.com
- Nové admin credentials: Recepce / PricnaRezervace2025!
- Automatické generování státních svátků (fixní + pohyblivé Velikonoce)
- Redesign admin panelu - denní zobrazení se šipkami podobný rezervačnímu systému
- Routing pro rezervace.pricna.cz → /admin/

--- a/admin/index-new.html
+++ b/admin/index-new.html
@@ -181,6 +181,6 @@
         </div>
     </div>
 
-    <script src="js/admin.js"></script>
+    <script src="js/admin-new.js"></script>
 </body>
 </html>
