Final admin improvements and bug fixes
✅ Opraveno:
- Synchronizace rezervací mezi admin panelem a hlavním webem
- Zrušené rezervace neblokují časové sloty
- Force reload rezervací po vytvoření/zrušení

✅ Změny:
- Status systém: Aktivní (zelené) / Zrušeno (červené) místo pending/confirmed
- Tlačítko 'Smazat' pouze pro zrušené rezervace
- Tlačítko 'Vybrat datum' s date pickerem
- Favicon v admin panelu
- Vylepšený confirmation email s poznámkou o platbě a vyzvednutí klíčů na recepci

--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recepce - Rezervační systém | Příčná Offices</title>
+    <link rel="icon" type="image/png" href="../images/logo.png">
     <link rel="stylesheet" href="css/admin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -73,6 +74,12 @@
                     <button id="today-btn" class="btn btn-outline">
                         <i class="fas fa-calendar-day"></i> Dnes
                     </button>
+                    <div class="date-picker-wrapper">
+                        <button id="pick-date-btn" class="btn btn-outline">
+                            <i class="fas fa-calendar-alt"></i> Vybrat datum
+                        </button>
+                        <input type="date" id="date-picker-input" style="display: none;">
+                    </div>
                     <button id="create-reservation-btn" class="btn btn-primary">
                         <i class="fas fa-plus"></i> Nová rezervace
                     </button>
