--- a/admin/index.html
+++ b/admin/index.html
@@ -75,10 +75,10 @@
                         <i class="fas fa-calendar-day"></i> Dnes
                     </button>
                     <div class="date-picker-wrapper">
-                        <button id="pick-date-btn" class="btn btn-outline">
+                        <button id="pick-date-btn" class="btn btn-outline" type="button">
                             <i class="fas fa-calendar-alt"></i> Vybrat datum
                         </button>
-                        <input type="date" id="date-picker-input" style="display: none;">
+                        <input type="date" id="date-picker-input">
                     </div>
                     <button id="create-reservation-btn" class="btn btn-primary">
                         <i class="fas fa-plus"></i> Nová rezervace
