Modernizace designu webu s animacemi a aktualizace kontaktních údajů
- Přidány moderní CSS animace (fadeIn, slideUp, scaleIn, atd.)
- Aktualizovány kontaktní údaje (Andrea Smolíková, Ing. Jan Stachovský)
- Přidány provozní doby - jednatelka/manager 7-15h, recepce 7-19h
- Vylepšeny všechny karty s hover efekty a gradienty
- Přidány animace na všech stránkách (index, kanceláře, byty, sdílené kanceláře, kontakt)
- Vylepšené office cards, apartment cards, building sections
- Nové company info sekce s IČ a adresami firem

--- a/byty.html
+++ b/byty.html
@@ -84,11 +84,11 @@
     <!-- Apartments Section -->
     <section class="section">
         <div class="container">
-            <h2 class="section-heading-styled">Dostupné byty</h2>
+            <h2 class="section-heading-styled fade-in">Dostupné byty</h2>
             
             <div class="apartments-grid">
                 <!-- Apartment 1 -->
-                <div class="apartment-card">
+                <div class="apartment-card scale-in" style="animation-delay: 0.1s;">
                     <div class="apartment-img-placeholder">
                         <img src="images/Byty/byt_11_kuchyne.JPG" alt="Byt 1+kk">
                     </div>
@@ -102,7 +102,7 @@
                 </div>
 
                 <!-- Apartment 2 -->
-                <div class="apartment-card">
+                <div class="apartment-card scale-in" style="animation-delay: 0.3s;">
                     <div class="apartment-img-placeholder">
                         <i class="fas fa-image"></i>
                     </div>
