--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
     <!-- About Section -->
     <section class="section" id="about">
         <div class="container">
-            <h2 class="section-heading-styled">O nás</h2>
+            <h2 class="section-heading-styled fade-in">O nás</h2>
             <div class="about-content">
-                <p>Všechno začalo jednoduchou myšlenkou – vytvořit příjemná místa, kde se lidé budou cítit dobře. Z tohoto nápadu se zrodily dvě malé havířovské firmy – <strong>Příčná Offices s.r.o.</strong> a <strong>Příčná Apartments s.r.o.</strong></p>
+                <p class="slide-in-left" style="animation-delay: 0.2s;">Všechno začalo jednoduchou myšlenkou – vytvořit příjemná místa, kde se lidé budou cítit dobře. Z tohoto nápadu se zrodily dvě malé havířovské firmy – <strong>Příčná Offices s.r.o.</strong> a <strong>Příčná Apartments s.r.o.</strong></p>
                 
-                <p>Jsme tým lidí, kteří mají rádi Havířov a věří, že i menší město může nabídnout kvalitní bydlení a moderní prostory pro podnikání. Každý byt i kancelář, které pronajímáme, mají svůj příběh – od poctivé rekonstrukce až po pečlivé doladění detailů.</p>
+                <p class="slide-in-right" style="animation-delay: 0.4s;">Jsme tým lidí, kteří mají rádi Havířov a věří, že i menší město může nabídnout kvalitní bydlení a moderní prostory pro podnikání. Každý byt i kancelář, které pronajímáme, mají svůj příběh – od poctivé rekonstrukce až po pečlivé doladění detailů.</p>
                 
-                <p>Naším cílem není být největší. Chceme být ti, za kterými se lidé rádi vracejí, protože ví, že se na nás mohou spolehnout. Ať už hledáte místo pro bydlení nebo podnikání, na Příčné v Havířově najdete víc než jen prostor – <strong>najdete klid, péči a férový přístup.</strong></p>
+                <p class="slide-in-left" style="animation-delay: 0.6s;">Naším cílem není být největší. Chceme být ti, za kterými se lidé rádi vracejí, protože ví, že se na nás mohou spolehnout. Ať už hledáte místo pro bydlení nebo podnikání, na Příčné v Havířově najdete víc než jen prostor – <strong>najdete klid, péči a férový přístup.</strong></p>
             </div>
         </div>
     </section>
@@ -158,21 +158,21 @@
     <!-- Services Section -->
     <section class="services bg-light" id="services">
         <div class="container">
-            <h2>Naše služby</h2>
+            <h2 class="fade-in">Naše služby</h2>
             <div class="services-grid">
-                <div class="service-card">
+                <div class="service-card scale-in" style="animation-delay: 0.1s;">
                     <i class="fas fa-building"></i>
                     <h3>Dlouhodobý pronájem kanceláří</h3>
                     <p>Profesionální kancelářské prostory ve třech budovách v Havířově. Ideální pro firmy hledající stabilní zázemí.</p>
                     <a href="kancelare.html" class="btn btn-primary">Zobrazit kanceláře</a>
                 </div>
-                <div class="service-card">
+                <div class="service-card scale-in" style="animation-delay: 0.3s;">
                     <i class="fas fa-users"></i>
                     <h3>Sdílené kanceláře</h3>
                     <p>Flexibilní pracovní místa s možností hodinového pronájmu. Perfektní pro freelancery a malé týmy.</p>
                     <a href="sdilene-kancelare.html" class="btn btn-primary">Rezervovat prostor</a>
                 </div>
-                <div class="service-card">
+                <div class="service-card scale-in" style="animation-delay: 0.5s;">
                     <i class="fas fa-home"></i>
                     <h3>Byty k pronájmu</h3>
                     <p>Komfortní byty v různých velikostech k dlouhodobému pronájmu v Havířově.</p>
@@ -185,9 +185,9 @@
     <!-- CTA Section -->
     <section class="section bg-light cta-section">
         <div class="container text-center">
-            <h2>Máte zájem o pronájem?</h2>
-            <p>Kontaktujte nás a my vám rádi pomůžeme najít ideální prostor pro vaše potřeby.</p>
-            <a href="kontakt.html" class="btn btn-primary btn-large">Kontaktovat nás</a>
+            <h2 class="fade-in">Máte zájem o pronájem?</h2>
+            <p class="fade-in" style="animation-delay: 0.2s;">Kontaktujte nás a my vám rádi pomůžeme najít ideální prostor pro vaše potřeby.</p>
+            <a href="kontakt.html" class="btn btn-primary btn-large scale-in" style="animation-delay: 0.4s;">Kontaktovat nás</a>
         </div>
     </section>
 
