--- a/kancelare.html
+++ b/kancelare.html
@@ -113,10 +113,10 @@
     <!-- Buildings Section -->
     <section class="section">
         <div class="container">
-            <h2>Naše budovy</h2>
+            <h2 class="fade-in">Naše budovy</h2>
             
             <!-- Příčná 1 -->
-            <div class="building-section" id="pricna1">
+            <div class="building-section slide-up" id="pricna1" style="animation-delay: 0.1s;">
                 <h3 class="building-title">Příčná 1 - Havířov, Město</h3>
                 <div class="building-image-banner building-image-dual">
                     <div class="dual-image-container">
@@ -175,7 +175,7 @@
             </div>
 
             <!-- Příčná 2 -->
-            <div class="building-section" id="pricna2">
+            <div class="building-section slide-up" id="pricna2" style="animation-delay: 0.2s;">
                 <h3 class="building-title">Příčná 2 - Havířov, Město</h3>
                 <div class="building-image-banner building-image-dual">
                     <div class="dual-image-container">
@@ -222,7 +222,7 @@
             </div>
 
             <!-- Dělnická 41 -->
-            <div class="building-section" id="delnicka41">
+            <div class="building-section slide-up" id="delnicka41" style="animation-delay: 0.3s;">
                 <h3 class="building-title">Dělnická 41 - Havířov, Podlesí</h3>
                 <div class="building-image-banner building-image-dual">
                     <div class="dual-image-container">
