--- a/kontakt.html
+++ b/kontakt.html
@@ -65,29 +65,49 @@
     <!-- Contact Section -->
     <section class="section">
         <div class="container">
-            <h2>Kontaktní údaje</h2>
+            <h2 class="fade-in">Kontaktní osoby</h2>
             
-            <!-- Owner Contact -->
-            <div class="contact-box owner-contact">
-                <h3><i class="fas fa-user-tie"></i> Majitel</h3>
-                <div class="contact-details">
-                    <p><strong>Jméno:</strong> Ing. Jan Stachovský</p>
-                    <p><i class="fas fa-phone"></i> <a href="tel:+420608429100">+420 608 429 100</a></p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:j.stachovsky@gmail.com">j.stachovsky@gmail.com</a></p>
+            <!-- Contact Grid -->
+            <div class="contacts-grid">
+                <!-- Andrea Smolíková -->
+                <div class="contact-card fade-in" style="animation-delay: 0.1s;">
+                    <div class="contact-icon">
+                        <i class="fas fa-user-tie"></i>
+                    </div>
+                    <h3>Andrea Smolíková, MBA</h3>
+                    <p class="contact-position">Jednatelka</p>
+                    <div class="contact-details">
+                        <p><i class="fas fa-phone"></i> <a href="tel:+420723693089">+420 723 693 089</a></p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:a.smolikova@gmail.com">a.smolikova@gmail.com</a></p>
+                        <p><i class="fas fa-clock"></i> <strong>Doba pro volání:</strong> Po-Pá: 7:00 - 15:00</p>
+                    </div>
+                </div>
+
+                <!-- Jan Stachovský -->
+                <div class="contact-card fade-in" style="animation-delay: 0.2s;">
+                    <div class="contact-icon">
+                        <i class="fas fa-user-cog"></i>
+                    </div>
+                    <h3>Ing. Jan Stachovský</h3>
+                    <p class="contact-position">Manager technické správy</p>
+                    <div class="contact-details">
+                        <p><i class="fas fa-phone"></i> <a href="tel:+420608429100">+420 608 429 100</a></p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:j.stachovsky@gmail.com">j.stachovsky@gmail.com</a></p>
+                        <p><i class="fas fa-clock"></i> <strong>Doba pro volání:</strong> Po-Pá: 7:00 - 15:00</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Receptions -->
-            <h2 class="section-title-margin">Recepce</h2>
+            <h2 class="section-title-margin fade-in">Recepce</h2>
             <div class="receptions-grid">
                 <!-- Reception Příčná -->
-                <div class="reception-card">
+                <div class="reception-card slide-up" style="animation-delay: 0.1s;">
                     <h3><i class="fas fa-building"></i> Recepce Příčná</h3>
                     <div class="contact-details">
                         <p><i class="fas fa-map-marker-alt"></i> Příčná 1, 736 01 Havířov - Město</p>
-                        <p><i class="fas fa-phone"></i> <a href="tel:+420234567890">+420 234 567 890</a></p>
-                        <p><i class="fas fa-envelope"></i> <a href="mailto:recepce.pricna@pricna.cz">recepce.pricna@pricna.cz</a></p>
-                        <p><i class="fas fa-clock"></i> Po-Pá: 7:00 - 19:00</p>
+                        <p><i class="fas fa-phone"></i> <a href="tel:+420731133412">+420 731 133 412</a></p>
+                        <p><i class="fas fa-clock"></i> <strong>Provozní doba:</strong> Po-Pá: 7:00 - 19:00</p>
                     </div>
                     <div class="map-container">
                         <iframe 
@@ -102,13 +122,12 @@
                 </div>
 
                 <!-- Reception Dělnická -->
-                <div class="reception-card">
+                <div class="reception-card slide-up" style="animation-delay: 0.2s;">
                     <h3><i class="fas fa-building"></i> Recepce Dělnická</h3>
                     <div class="contact-details">
                         <p><i class="fas fa-map-marker-alt"></i> Dělnická 41, 736 01 Havířov - Podlesí</p>
-                        <p><i class="fas fa-phone"></i> <a href="tel:+420234567891">+420 234 567 891</a></p>
-                        <p><i class="fas fa-envelope"></i> <a href="mailto:recepce.delnicka@pricna.cz">recepce.delnicka@pricna.cz</a></p>
-                        <p><i class="fas fa-clock"></i> Po-Pá: 7:00 - 19:00</p>
+                        <p><i class="fas fa-phone"></i> <a href="tel:+420704966572">+420 704 966 572</a></p>
+                        <p><i class="fas fa-clock"></i> <strong>Provozní doba:</strong> Po-Pá: 7:00 - 19:00</p>
                     </div>
                     <div class="map-container">
                         <iframe 
@@ -119,6 +138,32 @@
                             allowfullscreen="" 
                             loading="lazy">
                         </iframe>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Company Information -->
+            <h2 class="section-title-margin fade-in">Sídlo a údaje firem</h2>
+            <div class="company-info-grid">
+                <div class="company-card fade-in" style="animation-delay: 0.1s;">
+                    <div class="company-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <h3>Příčná Offices s.r.o.</h3>
+                    <div class="company-details">
+                        <p><i class="fas fa-map-marker-alt"></i> Pavlovova 586/8, 736 01 Havířov - Město</p>
+                        <p><i class="fas fa-id-card"></i> IČ: 05108888</p>
+                    </div>
+                </div>
+
+                <div class="company-card fade-in" style="animation-delay: 0.2s;">
+                    <div class="company-icon">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <h3>Příčná Apartments s.r.o.</h3>
+                    <div class="company-details">
+                        <p><i class="fas fa-map-marker-alt"></i> Pavlovova 586/8, 736 01 Havířov - Město</p>
+                        <p><i class="fas fa-id-card"></i> IČ: 05108811</p>
                     </div>
                 </div>
             </div>
